# doc-experiment-docusaurus

./: README.md  dune-project  mylib.opam  myotherlib.opam
.github/workflows/: deploy-doc.yml  test-deploy-doc.yml
doc/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
doc/blog/: authors.yml  tags.yml
doc/blog/2024-07-21-welcome/: index.md
doc/blog/2024-07-22-discuss/: index.md
doc/docs/explanation/: README.md
doc/docs/mylib/: hello_mylib.md  prelude.txt
doc/docs/reference/: odoc.md
doc/docs/tutorials/hello-mylib/: dune
doc/src/pages/: index.md
lib/mylib/src/: dune
lib/mylib/test/: dune  test__mylib.ml
lib/myotherlib/src/: dune  myotherlib.ml
lib/myotherlib/test/: dune  test__myotherlib.ml
